Fix overflow x2

--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -4,10 +4,13 @@
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
+
+	// border: 1px solid brown;
 }
 
 html,
 body {
+	display: flex;
 	height: 100%;
 	font-family: "Open Sans", sans-serif;
 	color: var(--color-text);
