--- a/src/components/features/AnimeInfo/AnimeInfo.module.scss
+++ b/src/components/features/AnimeInfo/AnimeInfo.module.scss
@@ -1,14 +1,16 @@
 .anime_info {
+	width: 100%;
 	display: flex;
 
 	@include card;
-
 	gap: var(--gap-2);
 
 	.anime_info_left {
+		width: 100%;
 		display: flex;
 		flex-direction: column;
 		gap: var(--gap);
+		flex-wrap: wrap;
 
 		.name {
 			font-size: var(--text-size-h3);
@@ -20,6 +22,8 @@
 		width: 100%;
 		height: 100%;
 		display: flex;
+		flex-wrap: wrap;
+
 		flex-direction: column;
 		gap: var(--gap-2);
 	}
