--- a/src/components/features/AnimeInfoLine/AnimeInfoLine.module.scss
+++ b/src/components/features/AnimeInfoLine/AnimeInfoLine.module.scss
@@ -3,4 +3,5 @@
 	gap: var(--gap);
 	align-items: center;
 	font-size: var(--text-size-h4);
+	flex-wrap: wrap;
 }
